syntax = "proto3";

package TaskoMask.BuildingBlocks.Contracts.Protos;

import "base.proto";

service GetProjectsByOrganizationIdGrpcService {
  rpc Handle (GetProjectsByOrganizationIdGrpcRequest) returns (stream GetProjectGrpcResponse);
}

message GetProjectsByOrganizationIdGrpcRequest {
  string organizationId = 1;
}